--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,11 +5,137 @@ body {
   font-family: "Muli", sans-serif;
 }
 
-p, li, input, select, button {
-  font-family: "Muli", sans-serif;
-  color: #666;
-  font-size: 14px;
-  font-weight: 400;
+
+#image_div #image_label
+{
+ margin:0px;
+ position:absolute;
+ top:120px;
+ margin-top:-120px;
+}
+#image_div #image_label span
+{
+ background-color:none;
+ opacity:0.8;
+ font-size:25px;
+ padding:7px;
+ box-sizing:border-box;
+ color:white;
+ font-weight:bold;
+}
+
+.circular--portrait {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.circular--portrait img {
+  width: 100%;
+  height: auto;
+}
+.graphicholder{
+  width: 300px;
+  height:300px;
+  position:relative;
+  margin: 0 auto;
+}
+.outerring{
+  width:250px;
+  height:250px;
+  background-color:#dee3dc;
+  border-radius: 50%;
+  position:absolute;
+  overflow: hidden;
+  left:25px;
+  top: 25px;
+  
+}
+  
+.pie {
+  width:250px;
+  height:250px;
+  opacity:0.8;
+  position:absolute;
+  top: 0;
+  right:0;
+  width: 250px; height: 250px;
+  border-radius: 50%;
+  background: #dee3dc;
+  background-image: linear-gradient(to right, transparent 50%, #73a79d 0);
+  line-height: 100px;
+  color: transparent;
+}
+
+@keyframes spin {
+to { transform: rotate(.5turn); }
+}
+@keyframes bg {
+50% { background: #73a79d; }
+}
+
+.pie::before {
+content: '';
+position: absolute;
+top: 0; left: 50%;
+width: 50%; height: 100%;
+border-radius: 0 100% 100% 0 / 50%;
+background-color: inherit;
+transform-origin: left;
+animation: spin 50s linear infinite,
+       bg 100s step-end infinite;
+animation-play-state: paused;
+animation-delay: inherit;
+}
+.highlight{
+  width: 233px;
+  height:233px;
+  border: 2px white solid;
+  border-radius: 50%;
+  float:left;
+  position:absolute;
+  top:7.5px;
+  left:7.5px;
+  opacity: 0.7;
+}
+.graphtext{
+  width:200px;
+  height:200px;
+  background-color:#fafafa;
+  border-radius: 50%;
+  float:left;
+  position:absolute;
+  top:25px;
+  left:25px;
+}
+.graphData{
+  width:100%;
+  height:170px;
+  position:absolute;
+  top:0px;
+  left:0px;
+  padding-top:50px;
+  opacity:1;
+}
+.graphData p{
+  font-size:18px;
+  text-align:center;
+}
+.graphData h5{
+  font-size:25px;
+  text-align: center;
+}
+.graphOuterBorder{
+  width:214px;
+  height:214px;
+  border-radius: 50%;
+  background-color:black;
+  top:18px;
+  left:18px;
+  position:absolute;
+  opacity: 0.2;
 }
 
 h1, h2, h3, h4, h5, h6 {
